--- a/booking.html
+++ b/booking.html
@@ -24,24 +24,28 @@
             <h2>Book Your Flight</h2>
             <form id="bookingForm">
                 <div class="form-group">
-                    <label for="firstName">First Name:</label>
-                    <input type="text" id="firstName" name="firstName" required>
-                </div>
-                <div class="form-group">
-                    <label for="lastName">Last Name:</label>
-                    <input type="text" id="lastName" name="lastName" required>
+                    <label for="fulltName">Full Name:</label>
+                    <input type="text" id="fullName" name="fullName" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" required>
                 </div>
                 <div class="form-group">
-                    <label for="accountNumber">Account Number:</label>
-                    <input type="number" id="accountNumber" name="accountNumber" required>
+                    <label for="phoneNumber">Phone Number:</label>
+                    <input type="number" id="phoneNumber" name="phoneNumber" required>
                 </div>
                 <div class="form-group">
-                    <label for="phone">Phone Number:</label>
-                    <input type="number" id="phone" name="phone" required>
+                    <label for="cardNumber">Card Number:</label>
+                    <input type="number" id="cardNumber" name="cardNumber" required>
+                </div>
+                <div class="form-group">
+                    <label for="expirationDate">Expiration Date:</label>
+                    <input type="date" id="expirationDate" name="expirationDate" required>
+                </div>
+                <div class="form-group">
+                    <label for="cvv">Cvv:</label>
+                    <input type="number" id="cvv" name="cvv" required>
                 </div>
                 <button type="submit">Book Now</button>
             </form>
