--- a/prijava.html
+++ b/prijava.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Confirmation</title>
-    <link rel="stylesheet" href="booking.css">
+    <title>Login</title>
+    <link rel="stylesheet" href="prijava.css">
 </head>
 <body>
     <div class="container">
         <header>
             <div class="logo-container">
-                <img src="img/logo.png" alt="Logo" class="logo-img">
                 <div class="logo">Flight Finder</div>
             </div>
             <nav>
@@ -21,17 +20,25 @@
         </header>
 
         <main>
-            <h1 id="greeting"></h1>
-            <form id="cardForm">
+            <h2>Login</h2>
+            <form id="loginForm">
                 <div class="form-group">
-                    <label for="cardNumber">Card Number:</label>
-                    <input type="password" id="cardNumber" name="cardNumber" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
                 </div>
-                <button type="submit">Book now!</button>
+                <button type="submit">Login</button>
             </form>
+            <div id="flightsContainer" class="hidden">
+                <h3>Your Flights</h3>
+                <div id="flightList"></div>
+            </div>
         </main>
     </div>
 
-    <script src="kartica.js"></script>
+    <footer>
+        <p>&copy; 2024 Flight Finder. All rights reserved.</p>
+    </footer>
+
+    <script src="prijava.js"></script>
 </body>
 </html>
